other/b-d/create-pod-antiaffinity/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: create-pod-antiaffinity
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../create-pod-antiaffinity.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: deployments.yaml
    - assert:
        file: patched-deploy01.yaml
    - error:
        file: not-patched-deploy02.yaml
    - error:
        file: not-patched-deploy03.yaml
    finally:
    - sleep:
        duration: 5s
